--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,34 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base{
+    html{
+        @apply scroll-smooth p-0 m-0 box-border;
+       
+    }
+   
+}
+@layer utilities{
+    .border{
+        @apply border-white ;
+    }
+    .card_title, .about_title{
+        @apply text-3xl font-Roboto;
+    }
+    .seperator{
+        @apply my-5 h-[2px] w-36 bg-secondaryColor;
+    }
+    .btn{
+        @apply capitalize p-2 rounded-md ease-linear hover:opacity-70 inline-block px-8 bg-secondaryColor text-black
+    }
+    .btn2{
+        @apply capitalize p-2 rounded-md ease-linear hover:opacity-70 hover:bg-secondaryColor inline-block px-8 bg-primaryColorLight 
+    }
+   .btn3{
+    @apply capitalize p-2 rounded-md ease-linear opacity-70  inline-block px-8 bg-secondaryColor
+   }
+   .heading{
+    @apply text-2xl  font-Roboto uppercase
+   }
+}
