--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,9 @@
         @apply scroll-smooth p-0 m-0 box-border;
        
     }
+    body{
+        @apply bg-moonColor
+    }
    
 }
 @layer utilities{
